...
            Button(action: {
                self.expand = false
                self.index = 1
            }) {
                VStack {
                    Image(systemName: "bubble.left.and.bubble.right.fill")
                    Text("Chat")
                }
            }
            .foregroundColor(Color("bg").opacity(self.index == 1 ? 1 : 0.3))
            
            Spacer()
            
...
